# github-pr-agent

./: .env.example  README.md  docker-compose.ollama.yaml  docker-compose.yaml  dockerfile  main.py  ollama.Dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/agents/: graph.py  runner.py  state.py  tools.py
app/api/: routes.py
app/core/: __init__.py  celery_app.py
app/models/: schema.py
app/tasks/: __init__.py  analyze.py  celery_worker.py
