[project]
name = "github-pr-agent-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "gitpython>=3.1.45",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.0",
    "redis>=6.2.0",
    "uvicorn[standard]>=0.35.0",
]
